# LaVague

./: pyproject.toml  test.py
lavague-core/: pyproject.toml
lavague-core/lavague/core/: agents.py  navigation.py  python_engine.py  world_model.py
lavague-core/lavague/core/utilities/: format_utils.py
lavague-integrations/contexts/lavague-contexts-openai/: pyproject.toml
lavague-integrations/drivers/lavague-drivers-playwright/lavague/drivers/playwright/: base.py
