[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
name = "lavague"
version = "1.1.20"
description = "automation code generation from text instructions"
authors = ["lavague-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "playwright"]
homepage = "https://mithrilsecurity.io"
repository = "https://github.com/lavague-ai/LaVague/"
documentation = "https://docs.lavague.ai/en/latest/"
packages = [{from = "_lavague", include = "lavague"}]

[tool.poetry.dependencies]
python = "^3.10.0"
lavague-core = { path = "../lavague-core" }
lavague-drivers-selenium = "^0.2.12"
lavague-contexts-openai = { path = "../lavague-integrations/contexts/openai" }
lavague-gradio = "^0.2.8"

[tool.poetry.dev-dependencies]
ruff = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

