[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lavague"
version = "1.1.20"
description = "automation code generation from text instructions"
authors = [{ name = "lavague-ai" }]
requires-python = ">=3.10.0,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "LAM",
    "action",
    "automation",
    "LLM",
    "NLP",
    "RAG",
    "selenium",
    "playwright",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "lavague-core",
    "lavague-drivers-selenium>=0.2.12,<0.3",
    "lavague-contexts-openai",
    "lavague-gradio>=0.2.8,<0.3",
    "lavague-drivers-playwright",
]

[project.urls]
Homepage = "https://mithrilsecurity.io"
Repository = "https://github.com/lavague-ai/LaVague/"
Documentation = "https://docs.lavague.ai/en/latest/"

[dependency-groups]
dev = [
    "ruff>=0.2.2,<0.3",
    "ipykernel>=6.29.4,<7",
]

[tool.uv]

[tool.uv.sources]
lavague-core = { path = "./lavague-core", editable = true }
lavague-contexts-openai = { path = "./lavague-integrations/contexts/lavague-contexts-openai", editable = true }
lavague-drivers-playwright = { path = "./lavague-integrations/drivers/lavague-drivers-playwright", editable = true }

[tool.hatch.build.targets.sdist]
include = ["_lavague/lavague"]

[tool.hatch.build.targets.wheel]
include = ["_lavague/lavague"]

[tool.hatch.build.targets.wheel.sources]
"_lavague/lavague" = "lavague"

